# contests

./: .gitignore  README.md  aliases.sh  codejam.py  codejam.round  common.hpp  fastio-0.0.1.hpp  fastio.hpp  heap.py  utils.py
ContestWorkspace/: .gitignore  CMakeLists.txt  GGrzContestWorkspace.cmake  GGrzContestWorkspace_GenerateResources.cmake  GGrzContestWorkspace_resources.cpp.in  Readme.md
ContestWorkspace/Main/: CMakeLists.txt  commands.cpp  commands.h  compare.cpp  compare.h  limits.cpp  limits.h  main.cpp  resources.h  test_discovery.cpp  test_discovery.h  test_execution.cpp  test_execution.h
ContestWorkspace/util/: compare.cpp  limits.cpp  resources.cpp  resources.h  test_discovery.cpp  test_discovery.h  test_main.cpp
amppz/: biblioteczka.hpp  mainedupl.py  tester
amppz/2002/: a.cpp  c.cpp  d.cpp  f.cpp  g.cpp  h.cpp
amppz/2010/: j.cpp
amppz/2011/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  X.cpp  Y.cpp  Z.cpp
amppz/2012/: aut.cpp  cia.cpp  dna.cpp  hyd.cpp  inw.cpp  jut.cpp  kro.cpp
amppz/2013/: H.cpp  baj.cpp  egz.cpp  her.cpp  inz.cpp  jan.cpp  wal.cpp
amppz/2014/: adw.cpp  ben.cpp  ben.in  cen.cpp  dzi.cpp  euk.cpp  fil.cpp  fil.gnuplot  fil1.in  fil2.in  glo.cpp  jas.cpp  jas.in  kap.cpp  wsp.cpp
amppz/2015/: A.cpp  B.cpp  D.cpp  F.cpp
amppz/2019/: A.cpp  C.cpp  D.cpp  H.cpp  I.cpp  Readme.md
amppz/mainedupl_data/: data.xml
amppz/mainedupl_lib/: http.py
codejamlib/: codejam.py  exporter.py  gchack.py  storage.py  swapper.py  task.py.tpl  utils.py
common/: union_find.hpp
deadline24/: d.py
deadline24/2015/: solve_utils.py
facebook hacker cup/2015/: codejam.py
marathon24/2014/: solve.py
mwpz/2013/: B.cpp
mwpz/2014/: A.cpp  B.cpp  B.in  F.cpp  G.bak..cpp  G.bak2.cpp  G.bak3.cpp  G.cpp  G.in  H.cpp  H.in  K.cpp  L.cpp  L.in  X.cpp  Y.cpp  f.in
mwpz/2015/: A.cpp  Agen.cpp  C.cpp  F.cpp
mwpz/2019/: .gitignore  A--Autostrada.cpp  B--Byki i Krowy.cpp  C--Cyrkulacja Smigla.cpp  D--Dziwne Palindromy--Hash.cpp  D--Dziwne Palindromy.cpp  E.cpp  G--Graf Jasia.cpp  H--Hurtownia z Liczbami.cpp  I--Iloczyn Mikolaja.cpp  (+3 more)
(+292 files in other folders)
